temp. info. alunos

--- a/templates/infoaluno.html
+++ b/templates/infoaluno.html
@@ -1,6 +1,6 @@
 <html>
     <h1>Informações do aluno!</h1>
-    <form action="/cadastro" method="POST">
+    <form action="cadastro" method="POST">
         <input type="text" nome="nome">
         <input type="text" nome="email">
         <input type="password" nome="senha">
