--- a/templates/infoaluno.html
+++ b/templates/infoaluno.html
@@ -1,9 +1,9 @@
 <html>
     <h1>Informações do aluno!</h1>
     <form action="cadastro" method="POST">
-        <input type="text" nome="nome">
-        <input type="text" nome="email">
-        <input type="password" nome="senha">
+        <input type="text" name="nome">
+        <input type="text" name="email">
+        <input type="password" name="senha">
         <input type="submit" value="Enviar">
     </form>
 </html>
