alter prod e cad

--- a/templates/cadproduto.html
+++ b/templates/cadproduto.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Cadastrar produto</h1>
-    <form action="/cdproduto" method="POST">
+    <form action="cdproduto" method="POST">
         <label for="NomeProd">Nome do produto:</label><br>
         <input type="text" name="NomeProd"><br>
         <label for="PrecoProd">Preço do produto:</label><br>
